# PITRADER

./: code (50).html
trading-firm/: .env  .env.example  README.md  docker-compose.yml  pyproject.toml
trading-firm/app/: __init__.py  bus.py  chief_strategist.py  legal_sentinel.py  macro_calendar.py  memory_keeper.py  news_miner.py  playbook_schema.py  signal_maker.py  telegram_bot.py  trader.py  watchdog.py
trading-firm/config/: settings.yaml
trading-firm/crontab/: crontab.txt
